592067:TISSQAUAT-1536:Space between other seller count and seller information is too long in Mobile devices issue fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -19985,7 +19985,7 @@ div.other-sellers .navigation button.next:after {
 }
 @media (max-width: 650px) {
     div.other-sellers .sort-by {
-        display: none;
+        display: none !important;
         background-color: transparent;
         border: none;
         position: relative
